--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "next": "^14.1.4",
+    "next-auth": "^5.0.0-beta.17",
     "node": "^18.20.1",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.31",
